--- a/dev/.gitignore
+++ b/dev/.gitignore
@@ -21,6 +21,9 @@ local.properties
 .classpath
 .project
 
+# Dependencies
+libs/
+
 # https://github.com/github/gitignore/blob/master/Global/IntelliJ.gitignore
 
 *.iml
