--- a/dev/LoneWolf/AndroidManifest.xml
+++ b/dev/LoneWolf/AndroidManifest.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.hoffenkloffen.lonewolf"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <application android:label="@string/app_name" >
-        <activity android:name="ACTIVITY_ENTRY_NAME"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+          package="com.hoffenkloffen.lonewolf"
+          android:versionCode="1"
+          android:versionName="1.0">
+    <application android:label="@string/app_name">
+        <activity android:name="com.hoffenkloffen.lonewolf.ActionChartActivity"
+                  android:label="@string/activity_action_chart"/>
+        <activity android:name="com.hoffenkloffen.lonewolf.SectionActivity"
+                  android:label="@string/activity_section"/>
     </application>
 </manifest> 
