--- a/dev/LoneWolfBook01/AndroidManifest.xml
+++ b/dev/LoneWolfBook01/AndroidManifest.xml
@@ -4,8 +4,8 @@
           android:versionCode="1"
           android:versionName="1.0"
           android:installLocation="auto">
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application android:label="@string/app_name">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
@@ -14,5 +14,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.hoffenkloffen.lonewolf.ActionChartActivity"
+                  android:label="@string/activity_action_chart"/>
+        <activity android:name="com.hoffenkloffen.lonewolf.SectionActivity"
+                  android:label="@string/activity_section"/>
     </application>
 </manifest> 
