--- a/dev/LoneWolf/AndroidManifest.xml
+++ b/dev/LoneWolf/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.hoffenkloffen.lonewolf"
           android:versionCode="1"
           android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="14"/>
     <application android:label="@string/app_name">
         <activity android:name="com.hoffenkloffen.lonewolf.ActionChartActivity"
                   android:label="@string/activity_action_chart"/>
