--- a/dev/android/LoneWolf/base/src/main/AndroidManifest.xml
+++ b/dev/android/LoneWolf/base/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hoffenkloffen.lonewolf.core" >
+    package="com.hoffenkloffen.lonewolf.base" >
 
     <application
         android:allowBackup="true"
