--- a/dev/android/LoneWolf/base/src/main/AndroidManifest.xml
+++ b/dev/android/LoneWolf/base/src/main/AndroidManifest.xml
@@ -6,16 +6,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <meta-data android:name="roboguice.modules" android:value="com.hoffenkloffen.lonewolf.base.context.MainModule" />
+        <activity android:name="com.hoffenkloffen.lonewolf.base.ActionChartActivity" android:label="@string/activity_action_chart" />
+        <activity android:name="com.hoffenkloffen.lonewolf.base.SectionActivity" android:label="@string/activity_section" />
+        <activity android:name="com.hoffenkloffen.lonewolf.base.LogActivity" android:label="@string/activity_log" />
+        <activity android:name="com.hoffenkloffen.lonewolf.base.CharacterCreationActivity" android:label="@string/activity_charactercreation" />
     </application>
 
 </manifest>
