--- a/dev/android/LoneWolf/base/build.gradle
+++ b/dev/android/LoneWolf/base/build.gradle
@@ -16,6 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
@@ -26,6 +34,6 @@ dependencies {
         compile 'org.roboguice:roboguice:3.+'
         provided 'org.roboguice:roboblender:3.+'
     }
-    androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'org.mockito:mockito-all:1.10.19'
+    androidTestCompile 'junit:junit-dep:4.11'
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
 }
