--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/LoneWolf.csproj
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/LoneWolf.csproj
@@ -51,6 +51,7 @@
       <DependentUpon>SectionPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SectionView.cs" />
+    <Compile Include="Views\ViewExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GettingStarted.Xamarin" />
