--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/packages.config
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.Forms" version="1.5.0.6446" targetFramework="portable45-net45+win8" />
 </packages>
