--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/LoneWolf.csproj
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/LoneWolf.csproj
@@ -40,12 +40,14 @@
     <Compile Include="IBaseUrl.cs" />
     <Compile Include="ISectionReader.cs" />
     <Compile Include="Models\Book.cs" />
+    <Compile Include="Models\Book01\Section000.cs" />
     <Compile Include="Models\Section.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\SectionViewModel.cs" />
+    <Compile Include="Views\Book01\Book01Section000View.cs" />
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -58,6 +60,7 @@
   <ItemGroup>
     <None Include="GettingStarted.Xamarin" />
     <None Include="packages.config" />
+    <None Include="Views\Book01\Book01Section000View.cshtml" />
     <None Include="Views\SectionView.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -90,6 +93,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.1.5.0.6446\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.1.5.0.6446\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
