--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.Test/packages.config
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.Test/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FakeItEasy" version="1.25.3" targetFramework="net46" />
   <package id="Lorem.NET" version="1.0.6" targetFramework="net46" />
+  <package id="Machine.Fakes" version="2.7.0" targetFramework="net46" />
+  <package id="Machine.Fakes.FakeItEasy" version="2.7.0" targetFramework="net46" />
   <package id="Machine.Specifications" version="0.9.3" targetFramework="net46" />
   <package id="Machine.Specifications.Should" version="0.8.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
