--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/LoneWolf.csproj
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/LoneWolf.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Domain\RandomNumberTable.cs" />
     <Compile Include="Extensions\JsonExtensions.cs" />
     <Compile Include="IBaseUrl.cs" />
     <Compile Include="ISectionReader.cs" />
