--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.Test/LoneWolf.Test.csproj
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.Test/LoneWolf.Test.csproj
@@ -71,6 +71,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Given_ActionChart.cs" />
+    <Compile Include="Models\Given_KaiDisciplineExtensions.cs" />
     <Compile Include="Models\Given_RandomNumberResult.cs" />
     <Compile Include="Domain\Given_RandomNumberTable.cs" />
     <Compile Include="Models\Given_PrologueReference.cs" />
