--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.Test/LoneWolf.Test.csproj
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.Test/LoneWolf.Test.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Given_ActionChart.cs" />
+    <Compile Include="Models\Given_HtmlToggleExtensions.cs" />
     <Compile Include="Models\Given_KaiDisciplineExtensions.cs" />
     <Compile Include="Models\Given_RandomNumberResult.cs" />
     <Compile Include="Domain\Given_RandomNumberTable.cs" />
