--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/LoneWolf.csproj
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/LoneWolf.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="Models\ActionChart.cs" />
+    <Compile Include="Models\Extensions.cs" />
     <Compile Include="Models\RandomNumberResult.cs" />
     <Compile Include="Domain\RandomNumberTable.cs" />
     <Compile Include="Extensions\JsonExtensions.cs" />
