--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/LoneWolf.csproj
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/LoneWolf.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Models\Book01\Section000.cs" />
     <Compile Include="Models\Prologue.cs" />
     <Compile Include="Models\Section.cs" />
+    <Compile Include="PropertiesRepository.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
