--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.iOS/LoneWolf.iOS.csproj
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.iOS/LoneWolf.iOS.csproj
@@ -155,9 +155,15 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\style.css" />
+    <BundleResource Include="..\LoneWolf\Views\prologue.css">
+      <Link>Resources\prologue.css</Link>
+    </BundleResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BundleResource Include="..\LoneWolf\Views\prologue.js">
+      <Link>Resources\prologue.js</Link>
+    </BundleResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.1.5.0.6446\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.1.5.0.6446\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
