--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.iOS/LoneWolf.iOS.csproj
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.iOS/LoneWolf.iOS.csproj
@@ -88,8 +88,10 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BaseUrlProxy.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="SectionReaderProxy.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
